🐝 fix: mobile row

--- a/src/components/Table/styles.styl
+++ b/src/components/Table/styles.styl
@@ -72,6 +72,7 @@
 
         td
             padding 1em 0 1em 1rem
+            flex-shrink unset
 
             &:last-child
                 padding-right 1rem
