--- a/src/ducks/categories/styles.styl
+++ b/src/ducks/categories/styles.styl
@@ -60,19 +60,6 @@
         background-repeat no-repeat
         transition all .2s
 
-    +small-screen('min')
-        .bnk-table-category-category
-            maxed-flex-basis 30%
-        .bnk-table-percentage
-            maxed-flex-basis 10%
-        .bnk-table-operation
-            maxed-flex-basis 10%
-        .bnk-table-amount
-        .bnk-table-total
-            maxed-flex-basis 14%
-        .bnk-table-chevron
-            maxed-flex-basis 5%
-
     .bnk-table-row
     .bnk-table-row--uncollapsed
         color charcoal-grey
@@ -90,7 +77,7 @@
             background-image embedurl('../../assets/icons/icon-chevron-down-active.svg')
             transform   rotate3d(1, 0, 0, 180deg)
 
-    +medium-screen()
+    +small-screen('min')
         .bnk-table-category-category
             maxed-flex-basis 50%
 
@@ -103,15 +90,18 @@
         .bnk-table-total
             maxed-flex-basis 30%
 
-    +small-screen()
+    +medium-screen('min')
         .bnk-table-category-category
-            maxed-flex-basis 53%
-
-        .bnk-table-percentage
-            maxed-flex-basis 17%
-
-        .bnk-table-total
             maxed-flex-basis 30%
+        .bnk-table-percentage
+            maxed-flex-basis 10%
+        .bnk-table-operation
+            maxed-flex-basis 10%
+        .bnk-table-amount
+        .bnk-table-total
+            maxed-flex-basis 14%
+        .bnk-table-chevron
+            maxed-flex-basis 5%
 
     // All icons and classes for categories types
 
@@ -126,4 +116,4 @@
             getCatBkg(category)
 
 .bnk-category-total-mobile
-    min-width 5.5rem // hel
+    min-width 5rem
