--- a/src/index.ejs
+++ b/src/index.ejs
@@ -24,10 +24,12 @@
 </head>
 <div
   role="application"
+  <% if (__TARGET__ !== 'mobile') { %>
   data-cozy-token="{{.Token}}"
   data-cozy-domain="{{.Domain}}"
   data-cozy-locale="{{.Locale}}"
   data-cozy-app-name="{{.AppName}}"
   data-cozy-icon-path="{{.IconPath}}"
   data-cozy-tracking="{{.Tracking}}"
+  <% } %>
 >
