feat: Cut transaction label

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -11,3 +11,8 @@ h4
     // to remove after update cozy-ui
     .u-hidden
         display none
+
+    .u-ellipsis
+        white-space nowrap
+        text-overflow ellipsis
+        overflow hidden
