🔨 refactor: move utilities to a file

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,18 +1,8 @@
 @require 'cozy-ui/defaults'
-@require './spacers.styl'
+@require './utilities.styl'
 
 h4
     margin-top 0
     margin-bottom 1rem
 
-:global
-  // Global utils classes comes here
 
-    // to remove after update cozy-ui
-    .u-hidden
-        display none
-
-    .u-ellipsis
-        white-space nowrap
-        text-overflow ellipsis
-        overflow hidden
