🔧 chore: use BEM

--- a/src/components/Menu/Item.styl
+++ b/src/components/Menu/Item.styl
@@ -1,8 +1,7 @@
-
-.coz-menu-item:hover
-.coz-menu-item:focus
+.coz-menu__item:hover
+.coz-menu__item:focus
     background-color pale-grey
     outline          none
 
-.coz-menu-item--disabled
+.coz-menu__item--disabled
     opacity .85
