--- a/src/components/Menu/Menu.styl
+++ b/src/components/Menu/Menu.styl
@@ -14,10 +14,5 @@
     margin-top 1px
     min-width  220px
 
-.coz-menu-inner--opened
+.coz-menu__inner--opened
     display block
-
-.coz-menu-item:hover
-.coz-menu-item:focus
-    background-color pale-grey
-    outline          none
