--- a/src/components/Menu/Menu.styl
+++ b/src/components/Menu/Menu.styl
@@ -16,3 +16,12 @@
 
 .coz-menu__inner--opened
     display block
+
+.coz-menu__btn
+    font-size 1rem
+    border 0
+
+.coz-menu__btn:not([disabled]):not([aria-disabled=true]):hover
+.coz-menu__btn:not([disabled]):not([aria-disabled=true]):active
+.coz-menu__btn:not([disabled]):not([aria-disabled=true]):focus
+    background transparent
