🔨 refactor: use ~ prefix paths not to use relative paths for easier refactoring

--- a/src/components/Layout/Layout.styl
+++ b/src/components/Layout/Layout.styl
@@ -1,6 +1,6 @@
 @require 'objects/layouts.styl'
-@require '../../styles/breakpoints.styl'
-@require '../../styles/variables.styl'
+@require '~styles/breakpoints.styl'
+@require '~styles/variables.styl'
 
 .coz-layout
     @extend    $app-2panes-sticky
