--- a/src/components/Table/styles.styl
+++ b/src/components/Table/styles.styl
@@ -1,5 +1,5 @@
-@require '../../styles/breakpoints.styl'
-@require '../../styles/mixins.styl'
+@require '~styles/breakpoints.styl'
+@require '~styles/mixins.styl'
 
 .coz-table
     position        relative
