--- a/src/ducks/settings/GroupsSettings.styl
+++ b/src/ducks/settings/GroupsSettings.styl
@@ -1,7 +1,7 @@
 @require 'settings/palette'
 @require 'components/forms.styl'
-@require '../../styles/breakpoints.styl'
-@require '../../styles/mixins.styl'
+@require '~styles/breakpoints.styl'
+@require '~styles/mixins.styl'
 
 .GrpsStg
     &__table
