--- a/src/ducks/settings/Settings.styl
+++ b/src/ducks/settings/Settings.styl
@@ -1,6 +1,6 @@
-@require '../../styles/breakpoints.styl'
-@require '../../styles/variables.styl'
-@require '../../styles/mixins.styl'
+@require '~styles/breakpoints.styl'
+@require '~styles/variables.styl'
+@require '~styles/mixins.styl'
 
 .bnk-coz-tab-list
     @extend $full-width
