--- a/src/ducks/transactions/TransactionsPage.styl
+++ b/src/ducks/transactions/TransactionsPage.styl
@@ -1,5 +1,5 @@
-@require '../../styles/breakpoints.styl'
-@require '../../ducks/filters/SelectDates.styl'
+@require '~styles/breakpoints.styl'
+@require '~ducks/filters/SelectDates.styl'
 
 .bnk-mov-page
     +small-screen()
