--- a/src/ducks/balance/Balance.styl
+++ b/src/ducks/balance/Balance.styl
@@ -1,5 +1,5 @@
-@require '../../styles/breakpoints.styl'
-@require '../../styles/mixins.styl'
+@require '~styles/breakpoints.styl'
+@require '~styles/mixins.styl'
 
 .balance-table
     @extend $full-width-table
