--- a/src/ducks/commons/Nav.styl
+++ b/src/ducks/commons/Nav.styl
@@ -1,4 +1,4 @@
-@require '../../styles/breakpoints.styl'
+@require '~styles/breakpoints.styl'
 @require 'objects/nav.styl'
 
 [role=application]// @stylint ignore
