--- a/src/ducks/settings/AccountsSettings.styl
+++ b/src/ducks/settings/AccountsSettings.styl
@@ -1,5 +1,5 @@
-@require '../../styles/breakpoints.styl'
-@require '../../styles/mixins.styl'
+@require '~styles/breakpoints.styl'
+@require '~styles/mixins.styl'
 
 .AcnsStg
     &__accounts
