🐝 fixup cool gray

--- a/src/ducks/settings/AccountsSettings.styl
+++ b/src/ducks/settings/AccountsSettings.styl
@@ -1,3 +1,4 @@
+@require 'settings/palette.styl'
 @require '~styles/breakpoints.styl'
 @require '~styles/mixins.styl'
 
@@ -20,9 +21,11 @@
 
     &__number
         maxed-flex-basis 15%
+        color cool-grey
 
     &__type
         maxed-flex-basis 15%
+        color cool-grey
 
         +small-screen()
             td& // increase selectivity with td
