feat: Add category name on mobile :art:

--- a/src/ducks/menu/ActionMenu.styl
+++ b/src/ducks/menu/ActionMenu.styl
@@ -36,14 +36,11 @@
 .menu-header
     font-size 0.8em
     display flex
-    padding 0 0 0 1em!important
-    background-repeat no-repeat
-    background-position-y 50%
-    background-position-x 1em!important
+    padding 0
 
     .menu-header-left
         flex 1 1 auto
-        padding 1.125rem 0.5625rem 1.125rem 3.125rem
+        padding 1rem 1rem 0.625rem
 
         h3
             align-self bottom
@@ -59,8 +56,7 @@
 
     .menu-header-right
         flex 0 1 auto
-        align-self center
-        padding 1.125rem 1.125rem 1.125rem 0.5625rem
+        padding 1rem 1rem 0.625rem
 
 .action-bill
     background embedurl('../../assets/icons/actions/icon-file.svg') 1rem center no-repeat
