fix: arrow color :art:

--- a/src/ducks/commons/Topbar.styl
+++ b/src/ducks/commons/Topbar.styl
@@ -33,3 +33,17 @@ $coz-bar-size = 48px
         overflow hidden
         display block
         box-sizing border-box
+
+        button
+            $size = 3rem
+            padding 0
+            margin 0
+            border 0
+            width $size
+            height $size
+            display block
+            background transparent
+            cursor pointer
+
+            svg
+                margin-top 2px
