--- a/src/ducks/menu/ActionMenu.styl
+++ b/src/ducks/menu/ActionMenu.styl
@@ -40,7 +40,7 @@
 
     .menu-header-left
         flex 1 1 auto
-        padding 1rem 1rem 0.625rem
+        padding 1rem 0 1em 1em
 
         h3
             align-self bottom
@@ -55,8 +55,9 @@
             text-transform capitalize
 
     .menu-header-right
+        font-size 1.1em
         flex 0 1 auto
-        padding 1rem 1rem 0.625rem
+        padding 1rem 1rem 1rem 0.5rem
 
 .action-bill
     background embedurl('../../assets/icons/actions/icon-file.svg') 1rem center no-repeat
