--- a/src/ducks/transactions/menu/ActionMenu.styl
+++ b/src/ducks/transactions/menu/ActionMenu.styl
@@ -60,13 +60,13 @@
         padding 1rem 1rem 1rem 0.5rem
 
 .action-bill
-    background embedurl('../../assets/icons/actions/icon-file.svg') 1rem center no-repeat
+    background embedurl('../../../assets/icons/actions/icon-file.svg') 1rem center no-repeat
 .action-attach
-    background embedurl('../../assets/icons/actions/icon-link.svg') 1rem center no-repeat
+    background embedurl('../../../assets/icons/actions/icon-link.svg') 1rem center no-repeat
 .action-comment
-    background embedurl('../../assets/icons/actions/icon-comment.svg') 1rem center no-repeat
+    background embedurl('../../../assets/icons/actions/icon-comment.svg') 1rem center no-repeat
 .action-app
 .action-refund
-    background embedurl('../../assets/icons/actions/icon-link-out.svg') 1rem center no-repeat
+    background embedurl('../../../assets/icons/actions/icon-link-out.svg') 1rem center no-repeat
 .action-alert
-    background embedurl('../../assets/icons/actions/icon-bell-16.svg') 1rem center no-repeat
+    background embedurl('../../../assets/icons/actions/icon-bell-16.svg') 1rem center no-repeat
