--- a/src/components/PopupSelect/styles.styl
+++ b/src/components/PopupSelect/styles.styl
@@ -5,3 +5,10 @@
 
 .row
     border-bottom 1px solid silver
+
+.buttonIcon
+    margin 0
+    padding 0 .5rem 0 0
+    border 0
+    cursor pointer
+    background-color transparent
