--- a/src/ducks/commons/Topbar.styl
+++ b/src/ducks/commons/Topbar.styl
@@ -12,38 +12,37 @@ $coz-bar-size = 48px
 
 +small-screen()
     .Topbar-title
-        margin-bottom 10px
-        margin-right 32px
-        margin-left 32px
         display     flex
         align-items center
         margin   0
+
+        // ellipsis
         text-overflow  ellipsis
         overflow       hidden
         white-space    nowrap
-        line-height    1
 
         h2
-            font-size 1.3em
+            font-size 1.3125rem
             margin    0
-            margin-left 1rem
 
     .Topbar-left
+        // same dimensions as in the bar
         width 40px
+        margin-right 0.25rem
+
         overflow hidden
         display block
         box-sizing border-box
 
         button
-            $size = 3rem
             padding 0
             margin 0
             border 0
-            width $size
-            height $size
+            height 3rem
             display block
             background transparent
             cursor pointer
+            width 100%
 
             svg
                 margin-top 2px
