--- a/src/components/PopupSelect/styles.styl
+++ b/src/components/PopupSelect/styles.styl
@@ -7,8 +7,5 @@
     border-bottom 1px solid silver
 
 .buttonIcon
-    margin 0
-    padding 0 .5rem 0 0
-    border 0
+    padding-right .5rem
     cursor pointer
-    background-color transparent
