🔧 chore: update to cozy-ui 4

--- a/src/components/Layout/Layout.styl
+++ b/src/components/Layout/Layout.styl
@@ -2,7 +2,7 @@
 @require '~styles/breakpoints.styl'
 @require '~styles/variables.styl'
 
-.coz-layout
+.c-layout
     @extend    $app-2panes-sticky
 
     // To move to Cozy-UI
@@ -48,7 +48,7 @@ body
 padded-content(pad)
     padding pad
 
-.coz-content
+.c-content
     width 100%
     padding content-padding
 
@@ -59,7 +59,7 @@ padded-content(pad)
     +medium-screen()
         display block
 
-.coz-sidebar
+.c-sidebar
     width            13.75rem
     border-right     1px solid silver
     background-color pale-grey
