--- a/src/components/Menu/Item.styl
+++ b/src/components/Menu/Item.styl
@@ -1,7 +1,7 @@
-.coz-menu__item:hover
-.coz-menu__item:focus
+.c-menu__item:hover
+.c-menu__item:focus
     background-color pale-grey
     outline          none
 
-.coz-menu__item--disabled
+.c-menu__item--disabled
     opacity .85
