--- a/src/ducks/account/AccountSwitch.styl
+++ b/src/ducks/account/AccountSwitch.styl
@@ -10,6 +10,15 @@
     margin-bottom 20px
     border-bottom 1px solid silver
 
+    a
+    a:visited
+        color            dodger-blue
+        text-decoration  none
+
+    a:hover
+    a:active
+        text-decoration  underline
+
 .account-switch-button
     margin 10px 0
     width 100%
