--- a/src/ducks/transactions/Transactions.styl
+++ b/src/ducks/transactions/Transactions.styl
@@ -81,7 +81,7 @@ for category in categories
         background-image embedurl(icon) // @stylint ignore
 
 +medium-screen()
-    .coz-table-body .coz-table-row
+    .c-table-body .c-table-row
         font-size 0.8em
-    .coz-table-cell.bnk-table-desc
+    .c-table-cell.bnk-table-desc
         padding-left    4em
