--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,4 +1,5 @@
-@require 'cozy-ui/defaults'
+@require 'generic/normalize.styl'
+@require 'elements/defaults.styl'
 @require './utilities.styl'
 
 h4
