--- a/src/index.ejs
+++ b/src/index.ejs
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Cozy Bank</title>
+  <link rel="stylesheet" type="text/css" href="//{{.Domain}}/assets/fonts/fonts.css">
   <% if (__TARGET__ !== 'mobile') { %>
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
