style: Update design :art:

--- a/src/components/PopupSelect/styles.styl
+++ b/src/components/PopupSelect/styles.styl
@@ -6,6 +6,10 @@
 .row
     border-bottom 1px solid silver
 
+    &:hover
+        background-color pale-grey
+        cursor pointer
+
 .buttonIcon
     padding-right .5rem
     cursor pointer
