fix: menu gesture :bug:

--- a/src/ducks/transactions/menu/ActionMenu.styl
+++ b/src/ducks/transactions/menu/ActionMenu.styl
@@ -10,6 +10,7 @@
     width          "calc(100% - %s)" % 1rem
     margin         0 0.5rem
     padding-bottom 0.3125rem
+    box-sizing border-box
 
     &.with-transition
         transition transform .1s ease-out
