style: Add hover on transaction menu :art:

--- a/src/ducks/transactions/menu/ActionMenu.styl
+++ b/src/ducks/transactions/menu/ActionMenu.styl
@@ -60,6 +60,11 @@
         flex 0 1 auto
         padding 1rem 1rem 1rem 0.5rem
 
+.hover
+    &:hover
+        background-color pale-grey
+        cursor pointer
+
 .action-bill
     background embedurl('../../../assets/icons/actions/icon-file.svg') 1rem center no-repeat
 .action-attach
