🔧 chore: remove superfluous TopbarLeft

--- a/src/components/BackButton/style.styl
+++ b/src/components/BackButton/style.styl
@@ -1,8 +1,9 @@
+@require '~styles/breakpoints.styl'
+
 .back-arrow.back-arrow
     color cool-grey
-    display inline-block
     float left
     font-size 1.25rem
-    line-height 1.5
+    line-height 1.6875
     margin-right 1.5rem
     cursor pointer
