refactor: Use breakpoints.styl from cozy-ui

--- a/src/components/Layout/Layout.styl
+++ b/src/components/Layout/Layout.styl
@@ -1,5 +1,5 @@
 @require 'objects/layouts.styl'
-@require '~styles/breakpoints.styl'
+@require 'settings/breakpoints'
 @require '~styles/variables.styl'
 
 .c-layout
