--- a/src/components/Loading/Loading.styl
+++ b/src/components/Loading/Loading.styl
@@ -1,5 +1,5 @@
 @require 'components/button.styl'
-@require '~styles/breakpoints.styl'
+@require 'settings/breakpoints'
 
 .bnk-loading, .bnk-loading--no-margin
     text-align center
