--- a/src/ducks/balance/Balance.styl
+++ b/src/ducks/balance/Balance.styl
@@ -1,4 +1,4 @@
-@require '~styles/breakpoints.styl'
+@require 'settings/breakpoints'
 @require '~styles/mixins.styl'
 @require 'settings/palette.styl'
 
