--- a/src/ducks/commons/Nav.styl
+++ b/src/ducks/commons/Nav.styl
@@ -1,4 +1,4 @@
-@require '~styles/breakpoints.styl'
+@require 'settings/breakpoints'
 @require 'components/nav.styl'
 
 [role=application]// @stylint ignore
@@ -25,4 +25,3 @@
                 height 1.15rem
                 margin auto
                 margin-bottom 0.25rem
-
