--- a/src/ducks/filters/SelectDates.styl
+++ b/src/ducks/filters/SelectDates.styl
@@ -1,4 +1,4 @@
-@require '~styles/breakpoints.styl'
+@require 'settings/breakpoints'
 @require '~styles/variables.styl'
 
 // Due to discrepancies between Chrome and Firefox in
