--- a/src/ducks/settings/GroupsSettings.styl
+++ b/src/ducks/settings/GroupsSettings.styl
@@ -1,6 +1,6 @@
 @require 'settings/palette'
 @require 'components/forms.styl'
-@require '~styles/breakpoints.styl'
+@require 'settings/breakpoints'
 @require '~styles/mixins.styl'
 
 .GrpsStg
