--- a/src/ducks/transactions/Transactions.styl
+++ b/src/ducks/transactions/Transactions.styl
@@ -1,6 +1,6 @@
 @require '~components/Table/styles' // table need to be required before since we override some styles
 @require '~styles/mixins.styl'
-@require '~styles/breakpoints.styl'
+@require 'settings/breakpoints'
 
 .bnk-op-table
     @extend $full-width-table
