--- a/src/styles/mixins.styl
+++ b/src/styles/mixins.styl
@@ -1,5 +1,5 @@
 @require './variables.styl'
-@require '~styles/breakpoints.styl'
+@require 'settings/breakpoints'
 
 /**
 Due to a IE11 bug, we need to specify max-width when using
