--- a/src/ducks/settings/AccountsSettings.styl
+++ b/src/ducks/settings/AccountsSettings.styl
@@ -1,5 +1,5 @@
 @require 'settings/palette.styl'
-@require '~styles/breakpoints.styl'
+@require 'settings/breakpoints'
 @require '~styles/mixins.styl'
 
 .AcnsStg
