--- a/src/ducks/settings/Settings.styl
+++ b/src/ducks/settings/Settings.styl
@@ -1,4 +1,4 @@
-@require '~styles/breakpoints.styl'
+@require 'settings/breakpoints'
 @require '~styles/variables.styl'
 @require '~styles/mixins.styl'
 
