--- a/src/components/PopupSelect/styles.styl
+++ b/src/components/PopupSelect/styles.styl
@@ -1,9 +1,9 @@
-.content
+.PopupSelect__content
     margin-left -1.5em
     width calc(100% + 3em)
     border-top 1px solid silver
 
-.row
+.PopupSelect__row
     border-bottom 1px solid silver
 
     &:hover
