--- a/src/components/PopupSelect/styles.styl
+++ b/src/components/PopupSelect/styles.styl
@@ -1,7 +1,9 @@
 .PopupSelect__content
     margin-left -1.5em
     width calc(100% + 3em)
-    border-top 1px solid silver
+
+.PopupSelect__title
+    border-bottom 1px solid silver
 
 .PopupSelect__row
     border-bottom 1px solid silver
@@ -9,6 +11,9 @@
     &:hover
         background-color pale-grey
         cursor pointer
+
+    &:last-child
+        border-bottom 0
 
 .buttonIcon
     padding-right .5rem
