--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,9 +1,8 @@
 @require 'generic/normalize.styl'
 @require 'elements/defaults.styl'
 @require './utilities.styl'
+@require './text.styl'
 
 h4
     margin-top 0
     margin-bottom 1rem
-
-
