🐝 fix: use overlay-index

--- a/src/components/Menu/Backdrop.styl
+++ b/src/components/Menu/Backdrop.styl
@@ -2,7 +2,7 @@
 
 .menu-backdrop
     position   fixed
-    z-index    $overlay
+    z-index    $overlay-index
     top        0
     right      0
     bottom     0
