✨ feat: unset max-width on intent  modal

--- a/src/components/IntentButton/Intent.styl
+++ b/src/components/IntentButton/Intent.styl
@@ -1,5 +1,10 @@
 @require 'settings/breakpoints'
 
+// TODO remove the second selector when specificity
+// of cozy-ui selectors has decreased
+.intentModal.intentModal
+    max-width unset
+
 .intentViewer
     iframe
         border: none
