🐝 fix: remove silver background on account switch

--- a/src/ducks/account/AccountSwitch.styl
+++ b/src/ducks/account/AccountSwitch.styl
@@ -151,7 +151,7 @@
         margin 0
 
     .account-switch-button-mobile
-        background embedurl('../../assets/icons/actions/filter.svg') center center no-repeat alpha(silver, 0.8)
+        background embedurl('../../assets/icons/actions/filter.svg') center center no-repeat
         margin 0
 
         &.active
