--- a/src/components/IntentButton/Intent.styl
+++ b/src/components/IntentButton/Intent.styl
@@ -3,15 +3,28 @@
 // TODO remove the second selector when specificity
 // of cozy-ui selectors has decreased
 .intentModal.intentModal
+    // takes 80% of the screen on desktop
     max-width unset
+    width 80vw
+    height 80vh
 
-.intentViewer
+    // takes 100% of the screen on mobile
+    +small-screen()
+        height 100%
+        width 100%
+
+    // child takes all height
+    & > div
+        height 100%
+
+        // cozy-collect resizes this element with a max-width of 931px
+        // they will remove it as it is a bug on their part. Then
+        // we can remove this code
+        max-width unset !important
+
     iframe
-        border: none
-        height: 400px
-        border-radius: 0.5em
-        width: 100%
+        width 100%
+        height 100%
+        border 0
 
-        +medium-screen()
-            width: 800px
-            height: 610px // Magic height to show 3 row of konnectors on desktop
+
