style: Improve tablet design :art:

--- a/src/components/Layout/Layout.styl
+++ b/src/components/Layout/Layout.styl
@@ -6,7 +6,7 @@
     @extend    $app-2panes-sticky
 
     // To move to Cozy-UI
-    +small-screen()
+    +medium-screen()
         display block
 
         // Those pseudo-elements are "ghost" elements replacing bar and nav
