--- a/src/ducks/commons/Nav.styl
+++ b/src/ducks/commons/Nav.styl
@@ -15,7 +15,7 @@
         svg
             margin-right 1rem
 
-        +small-screen()
+        +medium-screen()
             padding-left 0
             padding-top 0
             min-width inherit
