🐝 fix: border-color was wrong

--- a/src/emails/templates/transactionsNotif.hbs
+++ b/src/emails/templates/transactionsNotif.hbs
@@ -38,7 +38,7 @@
             </mj-text>
             {{#each transactions as |tr|}}
               {{> transaction tr }}
-              {{#unless @last}}<mj-divider padding-bottom="0" padding-top="0" border-width="1px" border-color="#d6d8da" />{{/unless}}
+              {{#unless @last}}<mj-divider padding-bottom="0" padding-top="0" border-width="1px" border-color="#D0D2D5" />{{/unless}}
             {{/each}}
           {{/each }}
         </mj-text>
