--- a/src/emails/templates/transactionsNotif.hbs
+++ b/src/emails/templates/transactionsNotif.hbs
@@ -1,28 +1,10 @@
-{{#extend "layout"}}
-  {{#content "appLogo"}}
-      <mj-table width="auto" css-class="header__title">
-        <tr>
-          <td width="30px">
-            <img align="left" width="30px" src="https://files.cozycloud.cc/bank/email-assets/logo-bank.png" alt="Cozy Bank" />
-          </td>
-          <td>
-            <h1 style="line-height: 32px">&nbsp;&nbsp;Bank</h1>
-          </td>
-        </tr>
-      </mj-table>
-  {{/content}}
-
-  {{#content "appName"}}
-    <h2>Bank</h2>
-  {{/content}}
-
-  {{#content "emailHeader"}}
-    <div class="header__desc__title txt--right">
+{{#extend "bank-layout"}}
+  {{#content "emailTitle"}}
       Notification de transactions
-    </div>
-    <div class="header__desc__subtitle txt--right">
-      {{ date }}
-    </div>
+  {{/content}}
+
+  {{#content "emailSubtitle"}}
+    {{ date }}
   {{/content}}
 
   {{#content "content"}}
