--- a/src/emails/templates/accountsNotif.hbs
+++ b/src/emails/templates/accountsNotif.hbs
@@ -15,10 +15,10 @@
           </mj-text>
           {{#each institution.accounts as |account|}}
             <mj-table>
-            <tr class="account">
-              <td><span>{{ capitalize this.label }}</span></td>
-              <td width="150px" align='right'><span>{{ colored this.amount }}</span></td>
-            </tr>
+              <tr class="tableRow">
+                <td>{{ capitalize this.label }}</td>
+                <td width="150px" align='right'><span>{{ colored this.amount }}</span></td>
+              </tr>
             </mj-table>
               {{#unless @last}}<mj-divider padding-bottom="0" padding-top="0" border-width="1px" border-color="#d6d8da" />{{/unless}}
           {{/each }}
