🔨 refactor: use cellpadding instead of spaces

--- a/src/emails/templates/cozy-layout.hbs
+++ b/src/emails/templates/cozy-layout.hbs
@@ -47,13 +47,13 @@
         <mj-section padding-bottom="0" padding-top="0">
           <mj-group>
             <mj-column>
-              <mj-table width="auto" css-class="header__title">
+              <mj-table width="auto" css-class="header__title" cellpadding='4px'>
                 <tr>
                   <td width="30px">
                     <img align="left" width="30px" src="{{#block 'logoUrl'}}{{/block}}" alt="{{#block 'appName'}}{{/block}}" />
                   </td>
                   <td>
-                    <h1 style="line-height: 32px">&nbsp;&nbsp;{{#block 'appName'}}{{/block}}</h1>
+                    <h1 style="line-height: 32px">{{#block 'appName'}}{{/block}}</h1>
                   </td>
                 </tr>
               </mj-table>
