--- a/src/components/Breadcrumb/style.styl
+++ b/src/components/Breadcrumb/style.styl
@@ -17,5 +17,8 @@
         cursor pointer
 
     +small-screen()
+        width 100% // for ellipsis to work correctly
+        &__crumb&__last
+            width 100% // for ellipsis to work correctly
         &__crumb:not(&__last)
               display none
