fix: iOS scroll on cordova :bug:
This is by design unfortunately. iOS safari will queue up all DOM manipulation until the end of a scroll or gesture. Effectively the DOM is frozen during a scroll.

--- a/src/ducks/filters/SelectDates.styl
+++ b/src/ducks/filters/SelectDates.styl
@@ -79,6 +79,8 @@ select-date-height-small = 2.5rem
         z-index 2
 
         height select-date-height-small
+        box-shadow:
+            0 (m - content-padding-small) 0 content-padding-small white
 
         &--scrolling
             shadow-height = 2 // px but we make calculations in rem underneath
