🔨 refactor: change color names to match those from cozy-ui

--- a/src/components/Figure/Figure.styl
+++ b/src/components/Figure/Figure.styl
@@ -4,7 +4,7 @@
 
 .bnk-figure-currency
     margin-left .2em
-    color       cool-grey
+    color       coolGrey
 
 .bnk-figure-content--positive
     color   emerald
