--- a/src/components/Layout/Layout.styl
+++ b/src/components/Layout/Layout.styl
@@ -62,7 +62,7 @@ padded-content(pad)
 .c-sidebar
     width            13.75rem
     border-right     1px solid silver
-    background-color pale-grey
+    background-color paleGrey
 
     +medium-screen()
         border-top  1px solid silver
