--- a/src/components/Menu/Item.styl
+++ b/src/components/Menu/Item.styl
@@ -1,6 +1,6 @@
 .c-menu__item:hover
 .c-menu__item:focus
-    background-color pale-grey
+    background-color paleGrey
     outline          none
 
 .c-menu__item--disabled
