--- a/src/components/PopupSelect/styles.styl
+++ b/src/components/PopupSelect/styles.styl
@@ -11,7 +11,7 @@
     border-bottom 1px solid silver
 
     &:hover
-        background-color pale-grey
+        background-color paleGrey
         cursor pointer
 
     &:last-child
