--- a/src/components/Table/styles.styl
+++ b/src/components/Table/styles.styl
@@ -28,7 +28,7 @@
 
     tbody
         tr:hover
-            background-color pale-grey
+            background-color paleGrey
 
     th
         text-align left
@@ -39,7 +39,7 @@
             font-size       .75em
             text-transform  uppercase
             display block
-        color           cool-grey
+        color           coolGrey
 
 
     td, th
@@ -102,11 +102,11 @@
             padding-top .5rem
             padding-bottom .25rem
             font-size 1rem
-            color charcoal-grey
+            color charcoalGrey
 
         .mobile-row-label
             padding-top .25rem
             padding-bottom .5rem
             font-size .75rem
-            color cool-grey
+            color coolGrey
             max-width fit-content
