--- a/src/ducks/account/AccountSwitch.styl
+++ b/src/ducks/account/AccountSwitch.styl
@@ -12,7 +12,7 @@
 
     a
     a:visited
-        color            dodger-blue
+        color            dodgerBlue
         text-decoration  none
 
     a:hover
@@ -32,14 +32,14 @@
         max-width 90%
         overflow hidden
         font-weight bold
-        color charcoal-grey
+        color charcoalGrey
         text-overflow ellipsis
         white-space nowrap
 
     .account-num
         margin-top 8px
         font-size .8em
-        color cool-grey
+        color coolGrey
         font-weight normal
 
     &.active
@@ -71,7 +71,7 @@
         margin 10px 0
         padding 0 19px
         font-size .8em
-        color cool-grey
+        color coolGrey
 
     ul
         list-style none
@@ -87,7 +87,7 @@
         border 0
         border-left 3px solid transparent
         background 0
-        color charcoal-grey
+        color charcoalGrey
         text-overflow ellipsis
         white-space nowrap
         cursor pointer
@@ -108,7 +108,7 @@
         font-weight bold
 
     .active, .active:hover
-        border-left-color dodger-blue
+        border-left-color dodgerBlue
         background  embedurl('../../assets/icons/icon-checked-blue.svg') 98% center no-repeat
         font-weight bold
 
@@ -117,7 +117,7 @@
 
     .account-count
         padding-left .5em
-        color cool-grey
+        color coolGrey
         font-size .8em
 
 +medium-screen()
