--- a/src/ducks/authentication/styles.styl
+++ b/src/ducks/authentication/styles.styl
@@ -81,7 +81,7 @@
 
 
         &::placeholder
-            color   charcoal-grey
+            color   charcoalGrey
             opacity .5
 
         &.error
@@ -96,7 +96,7 @@
             margin          1.5em .5em 0
             text-align      center
             text-decoration none
-            color           dodger-blue
+            color           dodgerBlue
             text-transform uppercase
 
 .select-server
@@ -105,7 +105,7 @@
 
 .welcome .logo-wrapper,
 .select-server .logo-wrapper
-    background dodger-blue
+    background dodgerBlue
 
 // ASSETS
 .cozy-logo-white
