--- a/src/ducks/balance/Balance.styl
+++ b/src/ducks/balance/Balance.styl
@@ -16,15 +16,15 @@
             text-align right
         .bank_name
             maxed-flex-basis 20%
-            color cool-grey
+            color coolGrey
         .account_number
             maxed-flex-basis 20%
-            color cool-grey
+            color coolGrey
 
         tbody
             .solde
             .account_name
-                color charcoal-grey
+                color charcoalGrey
 
                 &.alert
                     font-weight bold
