--- a/src/ducks/categories/styles.styl
+++ b/src/ducks/categories/styles.styl
@@ -67,7 +67,7 @@
 
     .bnk-table-row
     .bnk-table-row--uncollapsed
-        color charcoal-grey
+        color charcoalGrey
 
         .bnk-table-percentage
             font-weight bold
