--- a/src/ducks/settings/AccountsSettings.styl
+++ b/src/ducks/settings/AccountsSettings.styl
@@ -21,11 +21,11 @@
 
     &__number
         maxed-flex-basis 15%
-        color cool-grey
+        color coolGrey
 
     &__type
         maxed-flex-basis 15%
-        color cool-grey
+        color coolGrey
 
         +small-screen()
             td& // increase selectivity with td
@@ -67,5 +67,5 @@
                 background transparent
 
             td:first-child
-                color cool-grey
+                color coolGrey
                 font-size .85rem
