--- a/src/ducks/settings/Notifications.styl
+++ b/src/ducks/settings/Notifications.styl
@@ -1,10 +1,10 @@
 
 h4
-    color charcoal-grey
+    color charcoalGrey
     font-size 1.2em
 
 h5
-    color charcoal-grey
+    color charcoalGrey
     font-size 1em
     margin-top 0
     margin-bottom 5px
@@ -17,7 +17,7 @@ h5
     margin-bottom 20px
 
 .notification-description
-    color cool-grey
+    color coolGrey
     flex-grow 1
     margin 0
     font-size .9em
