--- a/src/ducks/transactions/Transactions.styl
+++ b/src/ducks/transactions/Transactions.styl
@@ -4,11 +4,11 @@
 
 .bnk-op-table
     @extend $full-width-table
-    color charcoal-grey
+    color charcoalGrey
 
     .bnk-op-date
         maxed-flex-basis 15%
-        color cool-grey
+        color coolGrey
 
     .bnk-op-desc
         maxed-flex-basis 30%
@@ -47,12 +47,12 @@
 
         .bnk-op-date-header
             display inherit
-            background-color pale-grey
+            background-color paleGrey
             border-width 0
 
             td
-                background-color pale-grey
-                color cool-grey
+                background-color paleGrey
+                color coolGrey
                 font-size 0.75rem
                 text-transform uppercase
                 font-weight bold
