--- a/src/styles/buttons.styl
+++ b/src/styles/buttons.styl
@@ -2,7 +2,7 @@
 // to v4
 .btn--no-outline
     background transparent
-    color dodger-blue
+    color dodgerBlue
     border 0
     padding 0
     font-weight bold
