--- a/src/components/Figure/FigureBlock.styl
+++ b/src/components/Figure/FigureBlock.styl
@@ -1,10 +1,10 @@
 @require 'settings/breakpoints'
 
 .bnk-figure-wrapper
-    color charcoal-grey
+    color charcoalGrey
 
 .bnk-figure-label
-    color cool-grey
+    color coolGrey
     margin 0
     text-transform uppercase
     font-size 0.75rem
