--- a/src/components/Loading/Loading.styl
+++ b/src/components/Loading/Loading.styl
@@ -14,11 +14,11 @@
         font-size(24px)
         margin         2.0625rem auto 0
         line-height    1.3
-        color          charcoal-grey
+        color          charcoalGrey
         letter-spacing -.2px
     p
         margin-top  0.9375rem
-        color       cool-grey
+        color       coolGrey
         line-height 1.5
 
 .pho-loading--no-margin
