--- a/src/styles/utilities.styl
+++ b/src/styles/utilities.styl
@@ -1,4 +1,5 @@
 @require './spacers.styl'
+@require 'settings/palette'
 @require 'generic/animations'
 
 :global
@@ -19,3 +20,7 @@
 
     .u-text-bold
         font-weight bold
+
+    .u-hover:hover
+        background paleGrey
+        cursor pointer
