hotfix: unset max-width for fullscreen modal
proper fix is to use IntentButton from cozy-ui

--- a/src/components/FullscreenIntentModal/styles.styl
+++ b/src/components/FullscreenIntentModal/styles.styl
@@ -5,6 +5,7 @@
         padding-top 0
         padding-bottom 0
         overflow hidden
+        max-width unset
 
     :global
         .coz-intent
