--- a/src/ducks/notifications/html/templates/balance-lower.hbs
+++ b/src/ducks/notifications/html/templates/balance-lower.hbs
@@ -17,7 +17,7 @@
             <mj-table>
               <tr class="tableRow">
                 <td>{{ capitalize this.label }}</td>
-                <td width="150px" align='right'><span>{{ colored this.amount }}</span></td>
+                <td width="150px" align='right'><span>{{ colored this.balance }}</span></td>
               </tr>
             </mj-table>
               {{#unless @last}}<mj-divider padding-bottom="0" padding-top="0" border-width="1px" border-color="#d6d8da" />{{/unless}}
