🐝 fix: use formatDate and positive from global helpers and use today for date for BalanceLower

--- a/src/ducks/notifications/html/templates/balance-lower.hbs
+++ b/src/ducks/notifications/html/templates/balance-lower.hbs
@@ -3,7 +3,7 @@
       Alerte Soldes de compte
   {{/content}}
   {{#content "emailSubtitle"}}
-    {{ date }}
+    {{ formatDate date }}
   {{/content}}
 
   {{#content "content"}}
