--- a/src/ducks/notifications/html/templates/transaction-greater.hbs
+++ b/src/ducks/notifications/html/templates/transaction-greater.hbs
@@ -4,7 +4,7 @@
   {{/content}}
 
   {{#content "emailSubtitle"}}
-    {{ date }}
+    {{ formatDate date }}
   {{/content}}
 
   {{#content "content"}}
