--- a/src/ducks/notifications/html/templates/balance-lower.hbs
+++ b/src/ducks/notifications/html/templates/balance-lower.hbs
@@ -11,11 +11,11 @@
       <mj-section css-class="account" padding-top="0" padding-bottom="10px">
         <mj-column>
           <mj-text padding-top="0" padding-bottom="0">
-            <h3>{{ institution.name }}</h3>
+            <h3 class='js-institution'>{{ institution.name }}</h3>
           </mj-text>
           {{#each institution.accounts as |account|}}
             <mj-table>
-              <tr class="tableRow">
+              <tr class="js-account tableRow">
                 <td>{{ capitalize this.label }}</td>
                 <td width="150px" align='right'><span>{{ colored this.balance }}</span></td>
               </tr>
