--- a/src/ducks/notifications/html/templates/transaction-greater.hbs
+++ b/src/ducks/notifications/html/templates/transaction-greater.hbs
@@ -21,7 +21,7 @@
             {{#each transactions as |tr|}}
               <mj-table>
                 <tr class="js-transaction tableRow">
-                  <td width="40px"><img style="width: 32px; height: 32px" src='https://files.cozycloud.cc/bank/email-assets/icons/{{ this.categoryId }}.png' /></td>
+                  <td width="40px"><img style="width: 32px; height: 32px" src='https://files.cozycloud.cc/bank/email-assets/icons/icon-cat-{{ parentCategory this }}.png' /></td>
                   <td>{{ capitalize this.label }}</td>
                   <td width="150px" align='right'><span>{{ colored this.amount }}</span></td>
                 </tr>
