✨ feat: add link on help and support

--- a/src/ducks/notifications/html/templates/cozy-layout.hbs
+++ b/src/ducks/notifications/html/templates/cozy-layout.hbs
@@ -89,7 +89,13 @@
             {{#block 'footerLeft' }}{{/block}}
           </mj-column>
           <mj-column>
-            {{#block 'footerRight' }}{{/block}}
+            {{#block 'footerRight' }}
+            <mj-text css-class="footer__help">
+              <a css-class="footer__help" href="https://support.cozy.io/">
+                Aide et support - Mentions légales
+              </a>
+            </mj-text>
+            {{/block}}
           </mj-column>
         </mj-group>
       </mj-section>
